# ralph-for-kiro

./: .gitignore  .mcp.json.example  CHANGELOG.md  LICENSE  LINKEDIN_POST.md  README.md  biome.json  bunfig.toml  mise.toml  package.json  pyproject.toml  tsconfig.json  watch-manifest.example.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release-please.yml  security.yml
.kiro/agents/: project-watcher.json
.kiro/steering/: watcher-context.md
.openspec/specs/watch-command/: spec.md
docs/adr/: 001-watch-command-architecture.md  002-iterative-deepening-research.md  003-reuse-existing-mcp-servers.md  004-manifest-lifecycle.md
scouts/: README.md
scouts/agent-sdks/: manifest.json
scouts/ai-eval/: manifest.json
scouts/ai-security/: manifest.json
scouts/computer-use/: manifest.json
scouts/hn-frontpage/: manifest.json
scouts/inference-infra/: manifest.json
src/: index.ts  version.ts
src/commands/: cancel.ts  index.ts  init.ts  loop.ts  resume.ts  scout.ts  watch.ts
src/core/: hook-installer.ts  index.ts  kiro-client.ts  loop-runner.ts  scout-init.ts  session-reader.ts  watch-runner.ts
src/data/: probe-topic.json  probe-topic.md  project-watcher.json  ralph-context.md  ralph-wiggum.json  watcher-context.md
src/data/examples/: hn-frontpage-manifest.json
src/data/hooks/: on-agent-spawn.sh  (+1 more)
src/ralph_wiggum/: __init__.py  __main__.py  cli.py
src/schemas/: config.ts  index.ts  manifest.ts  results.ts  session.ts  state.ts
src/types/: text.d.ts
src/utils/: paths.ts
tests/: __init__.py  cli.test.ts  commands.test.ts  conftest.py  core.test.ts  hooks.test.ts  schemas.test.ts  scout-concurrency.test.ts  scout-init.test.ts  test_session.py  test_session_reader.py  user-dir.test.ts
(+16 files in other folders)
