[project]
name = "ralph-wiggum"
version = "0.3.2"
description = "Ralph Wiggum iterative loop technique for Kiro CLI"
readme = "README.md"
authors = [
    { name = "laithalsaadoon", email = "alsaadoonlaith@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "cyclopts>=4.4.4",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
]

[project.scripts]
ralph = "ralph_wiggum.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ralph_wiggum"]

[tool.hatch.build.targets.wheel.force-include]
"src/ralph_wiggum/data" = "ralph_wiggum/data"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.0.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.14.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v"
